2010-06-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Giving this version code: APRX1J

	* dprsgw.c, digipeater.c, aprx.h, doc/aprx-manual.odt:
	    Clean DPRS Rx gateway code.

	* interface.c:
	    Correct 3rd-party packet gating filter behaviour:
	    If there are _no_ filters, pass all packets thru.

	* interface.c, aprx.h, dprsgw.c, igate.c:
	    Rate-limit source callsigns per source interface to
	    once per 30 seconds.  RF iGate DPRS messages to APRS
	    as 3rd-party messages.

2010-06-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c, dprsgw.c:
	    Rudimentary GPSxyz -> APRS symbol mapping for DPRS,
	    with GPSxyz overlay character where possible.
	    Also IDENT TEXT, if any.

	* debian/aprx.init:
	    The "restart" command fails to work quite often.
	    The reason being "set -e"...

	* aprx.h, igate.c, dprsgw.c, ttyreader.c, ax25.c:
	    igate_to_aprsis(... , STRICTAX25)  -- new flag
	    to control source specific information about
	    TNC2 format address formats.

	* parse_aprs.c:
	    Remove unnecessary double precission floating point math.
	    Use of 'float' is quite enough.

	* debian/control:
	    Change package name a bit

	* dprsgw.c:
	    Data collection code fixes

	* telemetry.c:
	    Send first telemetry at 20.0 minutes after start.
	    This is related to defaulting to EMBEDDED operation mode.

	* configure.in, aprx.h, erlang.c:
	    Change defaults so that System is always "--with-embedded",
	    and requires explicit "--with-erlangstorage" to compile with
	    a filesystem based backing storage codes.

2010-06-04  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, dprsgw.c:
	    Couple steps onwards with DPRS Rx-IGate.

2010-06-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Set software tocall to 'APRX1H'.

	* interface.c:
	    Found a memory leak on AX.25 type packet receiver. Oops!
	    Ax.25 packets that were rejected by <digipeater> <source>'s