@@ -1,13 +1,13 @@
 
-		APRX    v1.99
+		APRX    v2.00
 
-A receive-only APRS-IS "i-gate" with following properties:
+A multitalented APRS / DPRS / APRSIS "i-gate" with following properties:
 
    Config file (-f option) default is:  /etc/aprx.conf
    Other runtime options are: -v,  -d,  -h/-?  (verbout, debug and help)
 
    - Rx-IGate functionality works correctly
-   - Tx-IGate is incomplete (see TODO), but functional
+   - Tx-IGate functionality works correctly
 
    - Can do APRS New-N and generic AX.25 node digipeater functionality
      with transmitters
@@ -25,9 +25,10 @@ A receive-only APRS-IS "i-gate" with following properties:
    - Can receive data from remote TCP stream connectable serial ports
      over the internet.
 
-   - Understands on serial ports:
+   - Understands on serial ports (local and remote TCP ones):
        - several KISS protocol variants, plain basic KISS preferred
        - TNC2 debug style text (Rx-iGate receive only.)
+       - D-STAR data side-channel "D-PRS"
 
    - Connects with one  callsign-ssid  pair to APRS-IS core for all
      received radio ports
@@ -41,6 +42,9 @@ A receive-only APRS-IS "i-gate" with following properties:
               WIDE, RELAY, TRACE, TCPIP, TCPXX, NOCALL, N0CALL
      (Actually these are string prefixes, so any WIDE*-* will block, etc.)
 
+   - Has integrated D-PRS -> APRS/APRSIS Rx-iGate.
+     Can even do D-PRS -> APRS RF conversion.
+
    - Does not require machine to have AX.25 protocol support internally!
 
    - On Linux machine with kernel internal AX.25 protocol support, does
@@ -49,31 +53,14 @@ A receive-only APRS-IS "i-gate" with following properties:
      the port fails to open (running as non-root.)
 
    - Built-in "erlang-monitor" actually counts bytes per time interval
-     (1 min, 10 min, and 60 min)  on each receiving interface, including
-     all that feed internal AX.25 network.  There are multiple ways to
-     extract the report data.
-
-   - The "erlang-monitor" presumes that system internal time is on sync
-     with the UTC, as is the style in UNIX systems, and makes those
-     reports at exact 1 minute,  10 minutes and exact 60 minutes, cycle
-     depending.   This sync is best maintained with NTP tool.
-
-   - The "erlang-monitor" runs always, and stores data on backing-store
-     file  /tmp/aprx-erlang.dat,  which is mmap()able/read()able to
-     a program for analysis by:
-          - SNMP polling
-          - preanalyzed 1m, 10m, and 60m round-robin arrays
-     File is created if it does not exist.
+     (1 min, 10 min, and 20 min)  on each receiving interface, including
+     all that feed internal AX.25 network.
 
    - Telemetry reported erlang data is sent out every 20 minutes, and
      contains summarized data from 10 minute round-robin memory arrays.
      These are _not_ sent at exact 10 minutes of wall-clock, but exact
      20 minutes from previous telemetry reporting, and first one is sent
      20 minutes after program start.
-
-   - Auxiliary utility  aprx-stat  to pull statistics data out of the
-     shared memory segment (essentially obsoleted by direct telemetering
-     the info to APRS-IS.
 
    - The netbeacons are distributed timewise more evenly around the interval,
      and even the interval length is varied at random in between 20 and 30
